# yaecs

./: .gitignore  .pylintrc  .style.yapf  DOCUMENTATION.md  DOCUMENTATION_WIP.md  MANIFEST.in  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  short-readme.md
docs/: conf.py  getting_started.md  index.rst  installation.md  license.md  requirements.txt  yaecs.rst  yaecs_config.rst
scipts/: build_docs.sh  tests.sh
unittests/config/: conftest.py  test_config.py  test_utils.py  utils.py
unittests/experiment/: test_logger.py  utils.py
unittests/experiment/test_project_config/: config.py
usage_example/: .gitignore  README.md  main.py
usage_example/configs/: project_config.py
usage_example/configs/default/: data_config.yaml  main_config.yaml  model_config.yaml
usage_example/configs/experiment/: dummy_test.yaml  grid_search.yaml  random_search.yaml
usage_example/project_utils/: utils.py
yaecs/: __init__.py  config.py  config_history.py  config_utils.py  experiment.py  pytorch_lightning_utils.py  user_utils.py  version.py  yaecs_utils.py
yaecs/config/: config.py  config_base.py  config_convenience.py  config_getters.py  config_hooks.py  config_processing_functions.py  config_setters.py  setter.py  yaml_scanner.py
yaecs/experiment/: experiment.py  experiment_utils.py  pytorch_lightning_utils.py  timer.py  tracker.py
yaecs/experiment/loggers/: aggregate_logger.py  base_logger.py  logger_basic.py  logger_clearml.py  logger_mlflow.py  logger_sacred.py  logger_tensorboard.py  logger_utils.py
(+8 files in other folders)
