[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "yaecs"
authors = [
    {name="Reactive Reality AG"},
]
description = """A Config System designed for experimental purposes"""
requires-python = ">=3.6"
keywords = ["template", "machine", "learning"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["readme", "version"]
dependencies = ["pyyaml>=6,<7", "mock==4.0.3"]

[tool.setuptools]
packages = ["yaecs"]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[tool.setuptools_scm]
write_to = "yaecs/_version.py"

[project.urls]
Source = "https://gitlab.com/reactivereality/public/yaecs"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] , content-type = "text/markdown" }

[tool.coverage.run]
source = ["yaecs"]

[tool.yapf]
based_on_style = "pep8"
align_closing_bracket_with_visual_indent="True"
allow_multiline_dictionary_keys="True"
allow_multiline_lambdas="True"
arithmetic_precedence_indication="True"
column_limit=120
disable_ending_comma_heuristic="True"
space_between_ending_comma_and_closing_bracket="False"
split_before_arithmetic_operator="True"
split_before_dot="True"
split_before_named_assigns="False"
split_complex_comprehension="True"
